=== HEAD

* Allow plugins to have a configure method that is called on every attempt to load them (jeremyevans)

* Attempting to load an already loaded plugin no longer calls the plugin's apply method (jeremyevans)

* Make plugin's plugin_opts methods return an array of arguments if multiple arguments were given, instead of just the first argument (jeremyevans)

* Keep track of loaded plugins at Model.plugins, allows plugins to depend on other plugins (jeremyevans)

* Make Dataset#insert on PostgreSQL work with static SQL (jeremyevans)

* Add lazy_attributes plugin, for creating attributes that can be lazily loaded from the database (jeremyevans)

* Add tactical_eager_loading plugin, similar to DataMapper's strategic eager loading (jeremyevans)

* Don't raise an error when loading a plugin with DatasetMethods where none of the methods are public (jeremyevans)

* Add identity_map plugin, for creating temporary thread-local identity maps with some caching (jeremyevans)

* Support savepoints when using MySQL (jeremyevans)

* Add -C option to bin/sequel that copies one database to another (jeremyevans)

* In the schema_dumper extension, don't include defaults that contain literal strings unless the DBs are the same (jeremyevans)

* Only include valid non-partial indexes of simple column references in the PostgreSQL adapter (jeremyevans)

* Add -h option to bin/sequel for outputting the usage, alias for -? (jeremyevans)

* Add -d and -D options to bin/sequel for dumping schema migrations (jeremyevans)

* Support eager graphing for model tables that lack primary keys (jeremyevans)

* Add Model.create_table? to the schema plugin, similar to Database#create_table? (jeremyevans)

* Add Database#create_table?, which creates the table if it doesn't already exist (jeremyevans)

* Handle ordered and limited datasets correctly when using UNION, INTERSECT, or EXCEPT (jeremyevans)

* Fix unlikely threading bug with class level validations (jeremyevans)
