@@ -1,5 +1,7 @@
 === HEAD
 
+* On PostgreSQL, do not raise an error when attempting to reset the primary key sequence for a table without a primary key (jeremyevans)
+
 * Allow plugins to have a configure method that is called on every attempt to load them (jeremyevans)
 
 * Attempting to load an already loaded plugin no longer calls the plugin's apply method (jeremyevans)
